--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 </head>
 <body class="page">
 <header class="header">
-  <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-  <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+  <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
 </header>
 <main class="main">
-  <section id="add-task">
+  <section id="add__task">
     <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
+    <div class="task__row__wrapper">
       <input id="new-task" class="task" type="text">
       <button>Add</button>
     </div>
   </section>
   <section>
     <h3>Todo</h3>
-    <ul id="incomplete-tasks">
+    <ul id="incomplete__tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -30,7 +30,7 @@
           <img src="./remove.svg" alt="Remove button">
         </button>
       </li>
-      <li class="edit-mode">
+      <li class="edit__mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
@@ -43,7 +43,7 @@
   </section>
   <section>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="completed__tasks">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
